# WBTSdata

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  WBTSdata.html  conventions.html  demo-output.html  demo-output.ipynb  environment.yml  genindex.html  index.html  load_data.ipynb  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  search.html  searchindex.js
.github/: pull_request_template.md
.github/workflows/: docs.yml  docs_deploy.yml
WBTSdata/: attr_input.py  config.py  config.yaml  merge_datasets.py  plotters.py
_modules/: index.html
_modules/WBTSdata/: convert.html  load_vel_files.html  merge_datasets.html  plotters.html  tools.html
_sources/: demo-output.ipynb.txt
data/input/sample_cruise/CTD/: ab1811001_aoml.cal  ab1811002_aoml.cal  ab1811003_aoml.cal  ab1811004_aoml.cal  ab1811005_aoml.cal  ab1811006_aoml.cal  ab1811007_aoml.cal  ab1811008_aoml.cal  ab1811009_aoml.cal  ab1811010_aoml.cal  ab1811011_aoml.cal  ab1811012_aoml.cal  ab1811013_aoml.cal  ab1811014_aoml.cal  ab1811015_aoml.cal  ab1811016_aoml.cal  ab1811017_aoml.cal  ab1811018_aoml.cal  ab1811019_aoml.cal  ab1811020_aoml.cal  ab1811021_aoml.cal  ab1811022_aoml.cal  ab1811023_aoml.cal  ab1811024_aoml.cal  ab1811025_aoml.cal  ab1811026_aoml.cal  ab1811027_aoml.cal  ab1811028_aoml.cal  ab1811029_aoml.cal  ab1811030_aoml.cal  ab1811031_aoml.cal  ab1811032_aoml.cal  ab1811033_aoml.cal  ab1811034_aoml.cal  ab1811035_aoml.cal  ab1811036_aoml.cal  ab1811037_aoml.cal  ab1811038_aoml.cal  ab1811039_aoml.cal  ab1811040_aoml.cal  (+8 more)
data/input/sample_cruise/FINAL_ADCP_PRODUCTS/ladcp_velfiles/: AB1811_001d.vel  AB1811_002d.vel  AB1811_003d.vel  (+44 more)
docs/source/: conventions.rst  index.rst
notebooks/: demo.ipynb
tests/: conftest.py  test_merge_datasets.py  test_plotters.py  test_tools.py
