[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools-scm[toml]>=3.4",
  "wheel",
]

[project]
name = "WBTSdata"
description = "Loading data from the WBTS project"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "Till Moritz", email = "till.moritz@uni-hamburg.de" },
  { name = "Eleanor Frajka-Williams", email = "eleanorfrajka@gmail.com"}
]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "dependencies",
  "version",
]
urls.documentation = "https://github.com/ocean-uhh/WBTSdata"
urls.homepage = "https://github.com/ocean-uhh/WBTSdata"
urls.repository = "https://github.com/ocean-uhh/WBTSdata"

[tool.setuptools]
packages = [
  "WBTSdata",
]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = [
  "requirements.txt",
] }
readme = { file = "README.md", content-type = "text/markdown" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]  
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests", 
    "visual: marks tests as visual tests (for manual inspection)",
]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::RuntimeWarning", 
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnknownMarkWarning",
]
